HW 25 Login and Registration page (Tests and other)

--- a/src/main/resources/templates/Garage.html
+++ b/src/main/resources/templates/Garage.html
@@ -58,8 +58,12 @@
             <td>
                 <a href="http://localhost:8080/garage/persons" target="_self">All Persons</a>
                 <a href="http://localhost:8080/garage/cars" target="_self">All Cars</a>
+                <a style="color: #91c5ff" class="link-primary" th:href="@{/logout}">Logout </a>
             </td>
-
+        <tr>
+            <td>
+            </td>
+        </tr>
         </tr>
     </table>
 </h3>
