--- a/src/main/resources/templates/Persons.html
+++ b/src/main/resources/templates/Persons.html
@@ -3,33 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <title>Persons</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
 
+        .container {
+            margin-top: 50px;
+        }
+
+        .form-title {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .list-group {
+            max-height: 550px;
+            overflow-y: auto;
+        }
+
+        .list-group-item {
+            background-color: #fff;
+            margin-bottom: 10px;
+        }
+
+        .list-group-item-heading {
+            font-weight: bold;
+        }
+
+        .list-group-item-text {
+            color: #6c757d;
+        }
+
+        .search-container {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+
+        .search-form {
+            flex-grow: 1;
+            margin-right: 10px;
+        }
+
+        .search-input {
+            width: 100%;
+        }
+
+        .search-button {
+            width: 100px;
+        }
+
+        .view-cars-button {
+            width: 120px;
+        }
+
+        .new-client-button {
+            margin-top: 10px;
+            margin-right: 0;
+            float: right;
+            clear: both;
+        }
+    </style>
+</head>
 <body>
-<h3>
-    <table class="table table-bordered table-dark">
-        <thead>
-        <tr>
-            <td style="color: #91c5ff">
-                All Persons
-            </td>
-        <tr style="color: #91c5ff">
-            <th>Person ID</th>
-            <th>Name</th>
-            <th>Surname</th>
-        </tr>
-        </thead>
-        <tbody th:each="person: ${persons}">
-        <tr>
-        <tr style="color: lightslategray">
-            <td th:text="${person.id}"></td>
-            <td th:text="${person.name}"></td>
-            <td th:text="${person.surname}"></td>
-        </tr>
-        </tbody>
-    </table>
-</h3>
+<div class="container">
+    <h3 class="form-title">Persons</h3>
+
+    <div class="search-container">
+        <form class="search-form" th:action="@{/garage/persons}" method="get">
+            <input class="form-control search-input" type="search" placeholder="Search" aria-label="Search"
+                   name="search">
+        </form>
+        <button class="btn btn-outline-primary search-button" type="submit">Search</button>
+    </div>
+
+    <div class="list-group">
+        <!-- Loop through the list of persons and display them -->
+        <div th:each="person : ${persons}" class="list-group-item">
+            <h5 class="list-group-item-heading" th:text="${person.id}"></h5>
+            <p class="list-group-item-text" th:text="${person.name} + ' ' + ${person.surname}"></p>
+            <p class="list-group-item-text" th:text="${person.phoneNumber}"></p>
+            <a th:href="@{/garage/persons/{personId}/cars(personId=${person.id})}"
+               class="btn btn-primary view-cars-button">View Cars</a>
+        </div>
+    </div>
+
+    <a th:href="@{/garage/persons/registration}" class="btn btn-primary new-client-button" style="margin-top: 0px;">New
+        Client</a>
+</div>
 </body>
 </html>
