--- a/src/main/resources/templates/PersonCars.html
+++ b/src/main/resources/templates/PersonCars.html
@@ -59,12 +59,13 @@
                 <span th:text="${car.model}"></span>
                 <span th:text="${car.color}"></span>
             </p>
-            <a th:href="@{'/garage/autopart/car/' + ${car.id}}" class="btn btn-primary create-car-button float-end">View Details</a>
+            <a th:href="@{/garage/persons/{personId}/cars/{carId}(personId=${personId}, carId=${car.Id})}"
+               class="btn btn-primary create-car-button float-end">View Details</a>
         </div>
     </div>
 
     <a th:href="@{'/garage/persons'}" class="btn btn-primary create-car-button">Clients List</a>
-    <a th:href="@{'/garage/persons/' + ${personId} + '/addCar'}" class="btn btn-primary create-car-button">Create Car</a>
+    <a th:href="@{/garage/persons/{personId}/newCar(personId=${personId})}" class="btn btn-primary create-car-button">Create Car</a>
 </div>
 </body>
 </html>
