--- a/src/main/resources/templates/CreateAutoPart.html
+++ b/src/main/resources/templates/CreateAutoPart.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container">
     <form class="form-signin" id="autoPartForm">
-        <h2 class="form-signin-heading">Create an Auto Part</h2>
+        <h2 class="form-signin-heading">Новий ремонт</h2>
         <input type="hidden" id="carId" value="">
         <input type="hidden" id="personId" value="">
         <p>
