Search client added

--- a/src/main/resources/templates/Persons.html
+++ b/src/main/resources/templates/Persons.html
@@ -57,6 +57,8 @@
 
         .view-cars-button {
             width: 120px;
+            margin-left: auto; /* Added CSS */
+            display: block; /* Added CSS */
         }
 
         .new-client-button {
