--- a/src/main/resources/templates/AutoParts.html
+++ b/src/main/resources/templates/AutoParts.html
@@ -20,14 +20,14 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="text-center mb-4">Auto Parts List</h1>
+    <h1 class="text-center mb-4">Історія ремонту</h1>
     <div id="partsList">
         <div th:each="part : ${autoPart}">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title" th:text="${part.autoPartName}"></h5>
-                    <p class="card-text" th:text="'Price: $' + ${part.autoPartPrice}"></p>
-                    <p class="card-text" th:text="${part.autoPartDescription}"></p>
+                    <p class="card-text" th:text="'Пробіг авто: ' + ${part.millage} + ' км'"></p>
+                    <p class="card-text" th:text="'Деталі: '${part.autoPartDescription}"></p>
+                    <p class="card-text" th:text="'Ціна: ' + ${part.autoPartPrice} + ' грн'"></p>
                 </div>
             </div>
         </div>
