--- a/src/main/resources/templates/CreateCar.html
+++ b/src/main/resources/templates/CreateCar.html
@@ -38,6 +38,10 @@
       <label for="number">Number:</label>
       <input type="text" id="number" name="number" class="form-control" required>
     </div>
+    <div class="form-group">
+      <label for="vinCode">Vin Code:</label>
+      <input type="text" id="vinCode" name="vin code" class="form-control" required>
+    </div>
 
     <div class="form-group">
       <label for="brand">Brand:</label>
