--- a/src/main/resources/templates/Client.html
+++ b/src/main/resources/templates/Client.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Persons</title>
+    <title>Авто клієнта</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body {
@@ -13,91 +13,82 @@
             margin-top: 50px;
         }
 
-        .form-title {
-            text-align: center;
-            margin-bottom: 30px;
+        .card {
+            margin-bottom: 20px;
         }
 
-        .card-body {
+        #partsList {
             max-height: 550px;
             overflow-y: auto;
         }
 
-        .card {
-            margin-bottom: 10px;
-        }
-
-        .card-header {
-            background-color: #fff;
+        .card-title {
             font-weight: bold;
         }
 
-        .card-body p {
+        .card-text {
             color: #6c757d;
         }
 
+        .create-car-button {
+            margin-top: 20px;
+            width: 120px;
+        }
+
+        .float-right {
+            float: right;
+        }
+
         .search-container {
-            display: flex;
-            justify-content: space-between;
             margin-bottom: 20px;
         }
 
         .search-form {
-            flex-grow: 1;
-            margin-right: 10px;
+            display: flex;
+            margin-bottom: 10px;
         }
 
         .search-input {
-            width: 100%;
+            flex-grow: 1;
+            margin-right: 10px;
         }
 
         .search-button {
             width: 100px;
         }
-
-        .view-cars-button {
-            width: 120px;
-            margin-left: auto;
-            display: block;
-            margin-bottom: 10px; /* Добавлено свойство margin-bottom */
-
-        }
-
-        .new-client-button {
-            margin-top: 10px;
-            margin-right: 0;
-            float: right;
-            clear: both;
-        }
     </style>
 </head>
 <body>
+
 <div class="container">
-    <h3 class="form-title">Мої клієнти</h3>
+    <h1 class="text-center mb-4">Мої клієнти</h1>
 
     <div class="search-container">
         <form class="search-form" th:action="@{/garage/persons}" method="get">
             <input class="form-control search-input" type="search" placeholder="Search" aria-label="Search"
                    name="search">
+            <button class="btn btn-outline-primary search-button" type="submit">Пошук</button>
         </form>
-        <button class="btn btn-outline-primary search-button" type="submit">Пошук</button>
     </div>
 
-    <div class="card-body">
-        <!-- Loop through the list of persons and display them -->
+    <div id="partsList">
+        <!-- Loop through the list of cars and display them -->
         <div th:each="person : ${persons}" class="card">
             <div class="card-body">
-                <h5 th:text="${person.id}"></h5>
-                <p th:text="'Імʼя: ' + ${person.name}"></p>
-                <p th:text="'Прізвище: ' + ${person.surname}"></p>
-                <p th:text="'Номер телефону: ' + ${person.phoneNumber}"></p>
-                <a th:href="@{/garage/persons/{personId}/cars(personId=${person.id})}"
-                   class="btn btn-primary view-cars-button">Авто клієнта</a>
+                <h5 class="card-title" th:text="${person.name}"></h5>
+                <p class="card-text" th:text="'Прізвище: ' + ${person.surname}"></p>
+                <div class="float-right">
+                    <a th:href="@{/garage/persons/{personId}/cars(personId=${person.id})}"
+                       class="btn btn-primary create-car-button stretched-link">Авто</a>
+                </div>
+                <p class="card-text" th:text="'Номер телефону: ' + ${person.phoneNumber}"></p>
             </div>
         </div>
     </div>
 
-    <a th:href="@{/garage/persons/registration}" class="btn btn-primary new-client-button">Новий клієнт</a>
+    <div class="float-right">
+        <a th:href="@{/garage/persons/registration}" class="btn btn-primary create-car-button">Новий клієнт</a>
+    </div>
 </div>
 </body>
 </html>
