--- a/src/main/resources/templates/RegisterClient.html
+++ b/src/main/resources/templates/RegisterClient.html
@@ -49,27 +49,27 @@
 <body>
 <div class="container">
     <div class="form-wrapper">
-        <h1 class="form-title">Client Registration</h1>
+        <h1 class="form-title">Новий клієнт</h1>
         <form id="RegisterClientForm" method="POST" action="/garage/persons">
             <div class="form-group">
-                <label for="name">Name:</label>
+                <label for="name">Імʼя:</label>
                 <input type="text" class="form-control" id="name" name="name" required>
             </div>
             <div class="form-group">
-                <label for="surname">Surname:</label>
+                <label for="surname">Прізвище:</label>
                 <input type="text" class="form-control" id="surname" name="surname" required>
             </div>
             <div class="form-group">
-                <label for="phoneNumber">Phone Number:</label>
+                <label for="phoneNumber">Номер телефону:</label>
                 <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber" required>
             </div>
             <!-- Other form fields -->
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Створити</button>
         </form>
 
         <div id="message" class="alert alert-success mt-3" role="alert" style="display: none;"></div>
 
-        <a href="/garage/persons" class="btn btn-back">Back to Clients</a>
+        <a href="/garage/persons" class="btn btn-back">Повернутися до списку клієнтів</a>
     </div>
 </div>
 </body>
