--- a/src/main/resources/templates/CarCreatingPage.html
+++ b/src/main/resources/templates/CarCreatingPage.html
@@ -21,7 +21,7 @@
         </p>
         <p>
             <label class="form-label" for="vinCode">Він код</label>
-            <input class="form-control" id="vinCode" name="vin code" type="text" placeholder="Enter vin code" required>
+            <input class="form-control" id="vinCode" name="vinCode" type="text" placeholder="Enter vin code" required>
         </p>
         <p>
             <label class="form-label" for="brand">Бренд</label>
