--- a/src/main/resources/templates/RegisterClient.html
+++ b/src/main/resources/templates/RegisterClient.html
@@ -17,7 +17,6 @@
             margin-top: 20px;
         }
 
-        /* Custom styles */
         body {
             background-color: #f8f9fa;
         }
@@ -61,9 +60,12 @@
             </div>
             <div class="form-group">
                 <label for="phoneNumber">Номер телефону:</label>
-                <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber" required>
+                <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber"
+                       required pattern="^\+\d{1,3}\d{9}$"
+                       title="Must follow the format: +380631234567"
+                       oninvalid="this.setCustomValidity('Incorrect phone number format.')"
+                       oninput="this.setCustomValidity('')">
             </div>
-            <!-- Other form fields -->
             <button type="submit" class="btn btn-primary">Створити</button>
         </form>
 
@@ -72,5 +74,6 @@
         <a href="/garage/persons" class="btn btn-back">Повернутися до списку клієнтів</a>
     </div>
 </div>
+
 </body>
 </html>
