--- a/src/main/resources/templates/CreateAutoPart.html
+++ b/src/main/resources/templates/CreateAutoPart.html
@@ -91,7 +91,7 @@
         }
 
         function redirectToAutoPartsPage() {
-            window.location.href = '/garage/persons/' + personId + '/cars/' + carId;
+            window.location.href = '/garage/clients/' + personId + '/cars/' + carId;
         }
 
         var backToAutoPartsBtn = document.querySelector('#backToAutoPartsBtn');
