--- a/src/main/resources/templates/RegisterClient.html
+++ b/src/main/resources/templates/RegisterClient.html
@@ -49,7 +49,7 @@
 <div class="container">
     <div class="form-wrapper">
         <h1 class="form-title">Новий клієнт</h1>
-        <form id="RegisterClientForm" method="POST" action="/garage/persons">
+        <form id="RegisterClientForm" method="POST" action="/garage/clients">
             <div class="form-group">
                 <label for="name">Імʼя:</label>
                 <input type="text" class="form-control" id="name" name="name" required>
@@ -71,7 +71,7 @@
 
         <div id="message" class="alert alert-success mt-3" role="alert" style="display: none;"></div>
 
-        <a href="/garage/persons" class="btn btn-back">Повернутися до списку клієнтів</a>
+        <a href="/garage/clients" class="btn btn-back">Повернутися до списку клієнтів</a>
     </div>
 </div>
 
